--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -140,19 +140,6 @@ import "css/price/style_price.css";
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="content_pricing-policy">
 
     <div class="con-inside_pricing-policy">
@@ -180,12 +167,6 @@ import "css/price/style_price.css";
     </div>
     
   </div>
-
-
-
-
-
-
 
 
 
@@ -246,7 +227,10 @@ import "css/price/style_price.css";
 
 
   
-  
+  <div class="pros_pricing-policy">
+    <p>*We always do our best to find parts at a lower price for our customers. We do not make extra money on the parts; our priority is to make it as easy as possible for the customer.</p>
+    <p>Understanding the average cost to fix an appliance, including refrigerators, dishwashers, washers, and dryers, is crucial for homeowners who want to decide whether to replace or repair them.</p>
+  </div>
 
 </div>
 
@@ -259,9 +243,6 @@ import "css/price/style_price.css";
 
 
 
-<br>
-<p>We always do our best to find parts at a lower price for our customers. We do not make extra money on the parts; our priority is to make it as easy as possible for the customer.</p>
-<p>Understanding the average cost to fix an appliance, including refrigerators, dishwashers, washers, and dryers, is crucial for homeowners who want to decide whether to replace or repair them.</p>
 
 
 
@@ -826,6 +807,13 @@ import "css/price/style_price.css";
     </div>
     
     
+
+    <div class="pros_job-prices">
+      <p>*Free dust cleaning inside the unit is included in the service. </p>
+      <p>Considering the option of DIY appliance repair for simpler tasks, such as replacing a door latch or belt, can be a cost-effective way to save on labor costs. However, it's important to weigh the pros and cons of DIY repairs. While you may only need to pay for replacement parts, DIY repairs can take longer and may not offer the specialized knowledge and safety assurance that professional technicians provide.</p>
+    </div>
+
+
     </div>
     
     
@@ -841,42 +829,7 @@ import "css/price/style_price.css";
     
     
     
-    
-    
-    
-    <br><br><br><br><br><br><br><br>
-    
-    
-          <table style="font-size:1.5em; width:100%; margin:0 auto 0 auto;">
-          
-          <tbody>   
-        
-          <tr>
-          
-          <td class="tdservice">* including cleaning from dust inside the unit</td>
-          
-          <td></td>
-          
-          </tr>
-          
-          </tbody>
-    
-    
-          </table>
-          
-        </div>
-
-
-
-
-
-
-
-
-
-
-  
-<p>Considering the option of DIY appliance repair for simpler tasks, such as replacing a door latch or belt, can be a cost-effective way to save on labor costs. However, it's important to weigh the pros and cons of DIY repairs. While you may only need to pay for replacement parts, DIY repairs can take longer and may not offer the specialized knowledge and safety assurance that professional technicians provide.</p>
+ 
 
 
 <h2>Ways to Save Money on Dryer Repair</h2>
