--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -50,9 +50,11 @@ import "css/price/style_price.css";
       <p>At Same Day Appliance Repair, we are a family-owned business committed to enhancing your customer experience. We understand the frustration of appliance repairs, and we pride ourselves on our transparency and reliability. This page is designed to give you a thorough understanding of our pricing policies, the costs associated with dryer repairs, and our unique approach to service. We offer a wide range of appliance repair services, including dryer repair, to highlight the breadth of our expertise.</p>
       <p><b>Have Questions? We’re Here to Help!</b></p>
       <p>Feel free to call us with any questions. Our team is dedicated to assisting you and ensuring your satisfaction.</p>
+
       <h2>How Much Does It Cost to Repair a Dryer?</h2>
       <p>Discussing the average cost to repair is essential when considering the general costs associated with repairing common household appliances. Understanding the average dryer repair costs can help homeowners budget for repairs more effectively. Dryer repair costs can vary based on the type of issue as well as the brand and model of your appliance. Our technician will first need to diagnose the problem to provide you with the most accurate estimate. Following the diagnosis, you’ll receive a detailed price breakdown. This helps make an informed decision about whether to repair or replace your dryer and includes recommendations should you consider a replacement.</p>
       </div>
+
     </div>
 
 
@@ -1112,7 +1114,7 @@ import "css/price/style_price.css";
   <p><b>Age of the Dryer:</b> If your dryer is nearing the end of its expected lifespan (typically around 10-15 years), it may be more cost-effective to replace it, especially if multiple components are failing.</p>
   <p><b>Cost of Repairs:</b> Consider the repair cost compared to the replacement costs. If the repair costs are significantly lower than the price of a new dryer and the unit has plenty of life left, repairing it may be a sensible choice.</p>
   <p><b> Frequency of Repairs:</b> If your dryer has required multiple repairs in the past and is experiencing another issue, it may be a sign of ongoing problems. In such cases, investing in a new, more reliable dryer could save you money in the long run.</p>
-  <p><b>Energy Efficiency: Newer dryers are often more energy-efficient than older models, which can result in lower energy bills over time. If your current dryer is inefficient, upgrading to a newer model could lead to long-term savings.</p>
+  <p><b>Energy Efficiency:</b> Newer dryers are often more energy-efficient than older models, which can result in lower energy bills over time. If your current dryer is inefficient, upgrading to a newer model could lead to long-term savings.</p>
   <p><b>Features and Technology:</b> Modern dryers come with advanced features and technology that may offer added convenience and performance compared to older models. If you're interested in these features, replacing your old dryer might be worthwhile.</p>
   <p>Ultimately, the decision to repair or replace your older dryer depends on your budget, the extent of the repairs needed, and your long-term needs and preferences. Consulting with a professional appliance repair person can provide valuable insight into the condition of your dryer and help you make an informed decision.</p>
 </div>
@@ -1613,6 +1615,38 @@ import "css/price/style_price.css";
 </div>
 
 <div class="FAQ_bottom"></div> 
+
+
+
+
+
+
+
+
+<div id="phone-container">
+  <a href="tel:+14243250520">
+    <svg id="phone" height="50px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+    viewBox="0 0 512.001 512.001" xml:space="preserve">
+    <path id="phone-container-svg"  style="fill:#0f77cc;" d="M491.478,472.1l-96.891,39.9l-43.13-25.389C227.225,413.539,98.44,284.777,25.367,160.544L0,117.414
+    l39.9-96.891L83.21,0.001l86.642,129.952l-30.144,42.412l-20.343,28.596c19.714,34.742,50.263,72.804,84.556,107.097
+    c34.293,34.316,72.378,64.863,107.119,84.579l28.597-20.343l42.412-30.144l129.952,86.619L491.478,472.1z"/>
+    <g>
+      <polygon id="phone-container-svg" style="fill:#0f77cc;" points="83.208,0.007 169.853,129.956 139.712,172.36 139.458,172.715 39.904,20.524 	"/>
+      <polygon id="phone-container-svg"  style="fill:#0f77cc;" points="511.997,428.771 491.48,472.1 339.29,372.532 339.632,372.292 382.048,342.151 	"/>
+    </g>
+    <g>
+      <path  style="fill:#BBBBBD;" d="M377.841,255.584c-5.254,0-9.51-4.258-9.51-9.51c0-51.086-41.561-92.647-92.647-92.647
+      c-5.254,0-9.51-4.258-9.51-9.51s4.257-9.51,9.51-9.51c61.575,0,111.668,50.094,111.668,111.668
+      C387.351,251.327,383.093,255.584,377.841,255.584z"/>
+      <path  style="fill:#BBBBBD;" d="M454.441,255.584c-5.254,0-9.51-4.258-9.51-9.51c0-93.323-75.924-169.247-169.249-169.247
+      c-5.254,0-9.51-4.258-9.51-9.51s4.257-9.51,9.51-9.51c103.811,0,188.269,84.457,188.269,188.268
+      C463.951,251.327,459.694,255.584,454.441,255.584z"/>
+    </g>
+  </svg>
+  </a>
+</div>
+
+
 
 
       <Cta />
