--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -61,6 +61,24 @@ h2 {
   margin: 0;
 }
 
+.col-two p:nth-child(1){
+padding-top: 2%;
+}
+
+.col-two p:nth-child(2){
+  padding-top: 1%;
+  }
+  
+
+.two-col-grid {
+  display: block;
+}
+
+.col-one {
+  margin: 0 15px 15px 0;
+  float: left;
+}
+
 main {
     width: 100%;
     max-width: 1920px !important;
@@ -69,7 +87,7 @@ main {
 .max-w-screen-xl {
   width: 100%;
   max-width: 1920px !important;
-  padding: 2% 3% 2% 3%;
+  padding: 0% 3% 0% 3%;
 }
 
 
@@ -88,6 +106,11 @@ main {
   text-align: center;
   display: grid;
 }
+
+.head_pricing-policy h2:nth-child(1){
+  margin: 3% 0% 0% 0%;
+}
+
 
 .head_pricing-policy h2{
     margin: 6% 0% 0% 0%;
@@ -372,6 +395,69 @@ display: flex;
 
 
 
+
+/* быстрый звонок анимация  */
+  
+#phone-container {
+  position: fixed;
+  cursor: pointer;
+  bottom: 10px;
+  right: 4px;
+  width: 60px;
+  height: 100px;
+  animation: phoneAnimation 2.5s ease-in-out infinite alternate;
+  z-index: 1200;
+}
+
+#phone {
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+}
+
+#phone-container-svg {
+  stroke: #000;
+  stroke-width: 13px;
+}
+
+#phone-container:hover #phone {
+  opacity: 1;
+}
+
+@keyframes phoneAnimation {
+  0% {
+    transform: rotate(0deg); 
+  }
+  50% {
+    transform: rotate(20deg); 
+  }
+  100% {
+    transform: rotate(0deg); 
+  }
+}
+
+
+/* быстрый звонок анимация  */
+
+
+
+
+
+
+
+
+
+
+@media (max-width:1440px) {
+  .head_pricing-policy h2:nth-child(1){
+    margin: 6% 0% 0% 0%;
+  }
+}
+
+
+
+
+
   
 
   @media (max-width:1024px) {
@@ -456,6 +542,41 @@ display: flex;
 
 .pros_job-prices {
   width: 100%;
+  margin-top: 10%;
 }
 
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.hcp-button {
+  max-width: 96px;
+}
+
+
+
+
+
+
+
+
+
+
+#proChatIframeContainer {
+  /* display: none; */
+}
+
+#proChatIframeContainer {
+
+}
