--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -8,9 +8,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
+
 // import "/src/js/price/price.js";
 
 ---
+
 <!-- <script defer src="/src/js/price/price.js"></script> -->
 <!-- <script defer src="../../js/price/price.js"></script> -->
 
@@ -1623,10 +1625,10 @@ import "css/price/style_price.css";
 
 
 
-
+<!-- 
 <div id="phone-container">
   <a href="tel:+14243250520">
-    <svg id="phone" height="50px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+    <svg id="phone-content" height="50px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
     viewBox="0 0 512.001 512.001" xml:space="preserve">
     <path id="phone-container-svg"  style="fill:#0f77cc;" d="M491.478,472.1l-96.891,39.9l-43.13-25.389C227.225,413.539,98.44,284.777,25.367,160.544L0,117.414
     l39.9-96.891L83.21,0.001l86.642,129.952l-30.144,42.412l-20.343,28.596c19.714,34.742,50.263,72.804,84.556,107.097
@@ -1645,7 +1647,7 @@ import "css/price/style_price.css";
     </g>
   </svg>
   </a>
-</div>
+</div> -->
 
 
 
