--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -61,6 +61,14 @@ h2 {
   margin: 0;
 }
 
+.img-header {
+  box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 25%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 5px 14px 0px rgb(0 0 0 / 12%);
+}
+
+.col-two {
+  grid-column: auto;
+}
+
 .col-two p:nth-child(1){
 padding-top: 2%;
 }
@@ -394,60 +402,6 @@ display: flex;
 
 
 
-
-
-/* быстрый звонок анимация  */
-  
-#phone-container {
-  position: fixed;
-  cursor: pointer;
-  bottom: 10px;
-  right: 4px;
-  width: 60px;
-  height: 100px;
-  animation: phoneAnimation 2.5s ease-in-out infinite alternate;
-  z-index: 1200;
-}
-
-#phone {
-  width: 100%;
-  height: 100%;
-  opacity: 0.9;
-}
-
-#phone-container-svg {
-  stroke: #000;
-  stroke-width: 13px;
-}
-
-#phone-container:hover #phone {
-  opacity: 1;
-}
-
-@keyframes phoneAnimation {
-  0% {
-    transform: rotate(0deg); 
-  }
-  50% {
-    transform: rotate(20deg); 
-  }
-  100% {
-    transform: rotate(0deg); 
-  }
-}
-
-
-/* быстрый звонок анимация  */
-
-
-
-
-
-
-
-
-
-
 @media (max-width:1440px) {
   .head_pricing-policy h2:nth-child(1){
     margin: 6% 0% 0% 0%;
@@ -551,32 +505,3 @@ display: flex;
 
 
 
-
-
-
-
-
-
-
-
-
-.hcp-button {
-  max-width: 96px;
-}
-
-
-
-
-
-
-
-
-
-
-#proChatIframeContainer {
-  /* display: none; */
-}
-
-#proChatIframeContainer {
-
-}
