--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -14,7 +14,7 @@ import "components/css-components/style-footer.css";
   <script id="housecall-pro-chat-bubble" src="https://chat.housecallpro.com/proChat.js" type="text/javascript" data-color="#0E6FBE" data-organization="3fe576c5-6201-448a-a776-b450ad1cf95f" defer></script>
   
   <p class="text-center text-sm text-slate-500">
-    
+
     Copyright © {new Date().getFullYear()}. All rights reserved.
   </p>
   <!--
@@ -35,7 +35,7 @@ import "components/css-components/style-footer.css";
 
     <a href="tel:+14243250520">
 
-      <svg id="phone-content" height="50px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+      <svg alt="call" id="phone-content" height="50px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
       viewBox="0 0 512.001 512.001" xml:space="preserve">
       <path id="phone-container-svg"  style="fill:#0f77cc;" d="M491.478,472.1l-96.891,39.9l-43.13-25.389C227.225,413.539,98.44,284.777,25.367,160.544L0,117.414
       l39.9-96.891L83.21,0.001l86.642,129.952l-30.144,42.412l-20.343,28.596c19.714,34.742,50.263,72.804,84.556,107.097
