--- a/src/components/contactbtn.astro
+++ b/src/components/contactbtn.astro
@@ -1,7 +1,13 @@
 ---
 import Link from "./ui/link.astro";
 ---
-<div style="margin: 0 auto 0 auto; width:325px;">
-        <!--Start of Housecallpro Online booking button--> <button data-token="9e68ce292ba246dbba0fe928b98791f7" data-orgname="Same-Day-Appliance-Repair" class="hcp-button" onClick="HCPWidget.openModal()"> Book </button> <script async src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"> </script> <!--End of Housecallpro Online booking button-->
-<a style="width:210px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+14243250520">Call US: (424) 325-0520</a>
+<div class="contactbtn-form">
+
+        <!--Start of Housecallpro Online booking button--> <button data-token="9e68ce292ba246dbba0fe928b98791f7" data-orgname="Same-Day-Appliance-Repair" class="hcp-button" onClick="HCPWidget.openModal()"> Book </button> 
+        
+        <script async src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"> 
+        </script> <!--End of Housecallpro Online booking button-->
+
+<a style="background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+14243250520">Call US: (424) 325-0520</a>
+
 </div>
