--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,9 +1,20 @@
+---
+import "components/css-components/style-footer.css";
+
+
+
+---
+
+
+
+
 <footer class="my-20">
- <!--Housecall pro chat bubble-->
 
-
-
+ Housecall pro chat bubble
+  <script id="housecall-pro-chat-bubble" src="https://chat.housecallpro.com/proChat.js" type="text/javascript" data-color="#0E6FBE" data-organization="3fe576c5-6201-448a-a776-b450ad1cf95f" defer></script>
+  
   <p class="text-center text-sm text-slate-500">
+
     Copyright © {new Date().getFullYear()}. All rights reserved.
   </p>
   <!--
@@ -15,18 +26,45 @@
     Made by 
       Gain Top Skills
   </p>
-  <script>
-    var TimeoutSeconds = 5
 
-setTimeout(function(){
-  const chatBubble = document.createElement("script");
-  chatBubble.setAttribute("id", "housecall-pro-chat-bubble");
-  chatBubble.setAttribute("src", "https://chat.housecallpro.com/proChat.js");
-  chatBubble.setAttribute("type", "text/javascript");
-  chatBubble.setAttribute("data-color", "0E6FBE");
-  chatBubble.setAttribute("data-organization", "3fe576c5-6201-448a-a776-b450ad1cf95f");
-  chatBubble.defer = true;
-  document.append(chatBubble);
-}, TimeoutSeconds * 1000);
-  </script>
+
+
+
+
+  <div id="phone-container">
+
+    <a href="tel:+14243250520">
+
+      <svg id="phone-content" height="50px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+      viewBox="0 0 512.001 512.001" xml:space="preserve">
+      <path id="phone-container-svg"  style="fill:#0f77cc;" d="M491.478,472.1l-96.891,39.9l-43.13-25.389C227.225,413.539,98.44,284.777,25.367,160.544L0,117.414
+      l39.9-96.891L83.21,0.001l86.642,129.952l-30.144,42.412l-20.343,28.596c19.714,34.742,50.263,72.804,84.556,107.097
+      c34.293,34.316,72.378,64.863,107.119,84.579l28.597-20.343l42.412-30.144l129.952,86.619L491.478,472.1z"/>
+      <g>
+        <polygon id="phone-container-svg" style="fill:#0f77cc;" points="83.208,0.007 169.853,129.956 139.712,172.36 139.458,172.715 39.904,20.524 	"/>
+        <polygon id="phone-container-svg"  style="fill:#0f77cc;" points="511.997,428.771 491.48,472.1 339.29,372.532 339.632,372.292 382.048,342.151 	"/>
+      </g>
+      <g>
+        <path  style="fill:#BBBBBD;" d="M377.841,255.584c-5.254,0-9.51-4.258-9.51-9.51c0-51.086-41.561-92.647-92.647-92.647
+        c-5.254,0-9.51-4.258-9.51-9.51s4.257-9.51,9.51-9.51c61.575,0,111.668,50.094,111.668,111.668
+        C387.351,251.327,383.093,255.584,377.841,255.584z"/>
+        <path  style="fill:#BBBBBD;" d="M454.441,255.584c-5.254,0-9.51-4.258-9.51-9.51c0-93.323-75.924-169.247-169.249-169.247
+        c-5.254,0-9.51-4.258-9.51-9.51s4.257-9.51,9.51-9.51c103.811,0,188.269,84.457,188.269,188.268
+        C463.951,251.327,459.694,255.584,454.441,255.584z"/>
+      </g>
+      <title>call</title>
+    </svg>
+
+    </a>
+
+  </div>
+  
+
+
 </footer>
+
+
+
+
+
+
