--- a/src/components/btn.astro
+++ b/src/components/btn.astro
@@ -1,9 +1,9 @@
 ---
 import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
-
+import "components/css-components/style-btn.css";
 ---
-<div style="width:340px; margin:5px 0 10px 0;">
+<div class="common-communication-buttons">
 
     <a href="#top">
         <img loading="lazy" style="display:inline-block; margin:0 3px 2px 0;" alt="Go back to the top of the page" width="46" height="46" src="/images/back_to_top.png">
@@ -14,7 +14,9 @@ import { Icon } from "astro-icon";
 
         <script async src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"> </script> <!--End of Housecallpro Online booking button-->
 
-    <a style="width:180px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+14243250520">Call: (424) 325-0520</a> 
+    <div class="number-digit">
+        <a  href="tel:+14243250520">Call: (424) 325-0520</a> 
+    </div>
 
   </div>
 
