--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -7,13 +7,12 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-import Costanchor from "@components/cost-anchor.astro";
+import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
+
 import "css/price/style_price.css";
-// import "/src/js/price/price.js";
 
 ---
-<!-- <script defer src="/src/js/price/price.js"></script> -->
-<!-- <script defer src="../../js/price/price.js"></script> -->
+
 
 <script defer> 
   document.addEventListener('DOMContentLoaded', function () {
@@ -32,8 +31,11 @@ import "css/price/style_price.css";
   });
 </script>
 
+
 <Layout title="Dryer Repair Cost">
+
 <Container>
+  
     <main>
       
         <h1><span class="animate-charcter">Dryer Repair Cost</span></h1>
@@ -48,7 +50,9 @@ import "css/price/style_price.css";
      </div>
      
      <div class="col-two">
-<Costanchor />
+
+      <Costanchor/>
+
       <p>At Same Day Appliance Repair, we are a family-owned business committed to enhancing your customer experience. We understand the frustration of appliance repairs, and we pride ourselves on our transparency and reliability. This page is designed to give you a thorough understanding of our pricing policies, the costs associated with dryer repairs, and our unique approach to service. We offer a wide range of appliance repair services, including dryer repair, to highlight the breadth of our expertise.</p>
       <p><b>Have Questions? We’re Here to Help!</b></p>
       <p>Feel free to call us with any questions. Our team is dedicated to assisting you and ensuring your satisfaction.</p>
