--- a/src/components/css-components/style-footer.css
+++ b/src/components/css-components/style-footer.css
@@ -13,7 +13,7 @@
 
 
 /* быстрый звонок анимация  */
-  
+/*   
 #phone-container {
     position: fixed;
     cursor: pointer;
@@ -56,7 +56,7 @@
     #phone-container {
       width: 45px;
     }
-  }
+  } */
   
   /* быстрый звонок анимация  */
   
