--- a/src/components/btn.astro
+++ b/src/components/btn.astro
@@ -5,14 +5,36 @@ import "components/css-components/style-btn.css";
 <div class="full-button-global">
   <div class="button-top-global">
     <a href="#top">
-      <img
-        loading="lazy"
-        style="display:inline-block; margin:0 3px 2px 0;"
-        alt="Go back to the top of the page"
-        width="46"
-        height="46"
-        src="/images/back_to_top.png"
-      />
+      <svg
+        width="43px"
+        height="34px"
+        viewBox="0 -4.5 20 20"
+        version="1.1"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink">
+        <desc>Created with Sketch.</desc>
+        <defs> </defs>
+        <g
+          id="Page-1"
+          stroke="none"
+          stroke-width="1"
+          fill="none"
+          fill-rule="evenodd">
+          <g
+            id="Dribbble-Light-Preview"
+            transform="translate(-140.000000, -6683.000000)"
+            fill="#fff">
+            <g id="icons" transform="translate(56.000000, 160.000000)">
+              <path
+                d="M84,6532.61035 L85.4053672,6534 L94.0131154,6525.73862 L94.9311945,6526.61986 L94.9261501,6526.61502 L102.573446,6533.95545 L104,6532.58614 C101.8864,6530.55736 95.9854722,6524.89321 94.0131154,6523 C92.5472155,6524.40611 93.9757869,6523.03486 84,6532.61035"
+                id="arrow_up-[#340]">
+              </path>
+            </g>
+          </g>
+        </g>
+        <title>Go back to the top of the page</title>
+      </svg>
+      <p>TOP</p>
     </a>
     <!--Start of Housecallpro Online booking button-->
   </div>
@@ -21,10 +43,10 @@ import "components/css-components/style-btn.css";
     <button
       data-token="9e68ce292ba246dbba0fe928b98791f7"
       data-orgname="Same-Day-Appliance-Repair"
-      class="hcp-button"
       onClick="HCPWidget.openModal()">
       Book
     </button>
+    <!-- class="hcp-button" -->
 
     <script
       async
@@ -34,10 +56,6 @@ import "components/css-components/style-btn.css";
   </div>
 
   <div class="button-call-global">
-    <a
-      style="width:180px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;"
-      title=""
-      href="tel:+14243250520">Call: (424) 325-0520</a
-    >
+    <a href="tel:+14243250520">Call: (424) 325-0520</a>
   </div>
 </div>
