--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -3,9 +3,9 @@ import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
 import Btn from "@components/btn.astro";
 import Contactbtn from "@components/contactbtn.astro";
-import Features from "@components/features.astro";
-import Hero from "@components/hero.astro";
-import Logos from "@components/logos.astro";
+// import Features from "@components/features.astro";
+// import Hero from "@components/hero.astro";
+// import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 
@@ -130,7 +130,7 @@ import "css/price/style_price.css";
                   ></path>
                 </g>
               </svg>
-              <h6>Maintenance Cost</h6>
+              <h3>Maintenance Cost</h3>
             </div>
 
             <div class="desc_pricing-policy">
@@ -165,7 +165,7 @@ import "css/price/style_price.css";
                   d="M610.133 409.6c4.267 0 12.8 0 17.067-4.267L802.133 230.4l34.133 34.133-174.933 174.933c-8.533 8.533-8.533 21.333 0 29.867 4.267 4.267 8.533 4.267 17.067 4.267 4.267 0 12.8 0 17.067-4.267l196.267-192 68.267-25.6c4.267-4.267 12.8-8.533 12.8-12.8l29.867-85.333c4.267-8.533 0-17.067-4.267-21.333l-59.733-64c-4.267-4.267-12.8-8.533-21.333-4.267l-85.333 29.867c-4.267 4.267-12.8 8.533-12.8 12.8l-25.6 72.533c-4.267 0-4.267 4.267-4.267 4.267l-192 192c-8.533 8.533-8.533 21.333 0 29.867 4.267 4.267 8.533 4.267 12.8 4.267zm243.2-277.333l64-21.333 38.4 38.4-21.333 64-64 21.333-38.4-38.4 21.333-64zm-384 558.933L209.066 951.467c-8.533 8.533-17.067 8.533-21.333 4.267l-81.067-81.067c-4.267-4.267 0-12.8 4.267-21.333l256-256c8.533-8.533 8.533-21.333 0-29.867s-21.333-8.533-29.867 0l-256 256c-25.6 25.6-25.6 59.733-4.267 81.067l81.067 81.067c8.533 8.533 21.333 12.8 34.133 12.8 17.067 0 34.133-8.533 46.933-21.333l260.267-260.267c8.533-8.533 8.533-21.333 0-29.867s-21.333-4.267-29.867 4.267z"
                 ></path></svg
               >
-              <h6>Service fees</h6>
+              <h3>Service fees</h3>
             </div>
 
             <div class="desc_pricing-policy">
@@ -217,7 +217,7 @@ import "css/price/style_price.css";
 	C325.344,171.24,307.88,153.776,286.424,153.776z"
                 ></path>
               </svg>
-              <h6>Labor cost</h6>
+              <h3>Labor cost</h3>
             </div>
 
             <div class="desc_pricing-policy">
@@ -279,7 +279,7 @@ import "css/price/style_price.css";
  L204.775,120.721z"
                 ></path>
               </svg>
-              <h6>Replacement Parts cost</h6>
+              <h3>Replacement Parts cost</h3>
             </div>
 
             <div class="desc_pricing-policy">
@@ -309,7 +309,7 @@ import "css/price/style_price.css";
         </div>
       </div>
 
-      <Btn />
+      <Btn/>
 
       <div class="job-prices">
         <div class="head-prices">
@@ -601,7 +601,7 @@ import "css/price/style_price.css";
         </div>
       </div>
 
-      <Btn />
+      <Btn/>
 
       <div class="job-prices">
         <div class="head-prices">
@@ -704,6 +704,9 @@ import "css/price/style_price.css";
           </p>
         </div>
       </div>
+
+
+      
 
       <h2>Ways to Save Money on Dryer Repair</h2>
       <p>
