--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -107,7 +107,7 @@ main {
 .pricing-policy {
   width: 100%;
   display: grid;
-  margin-bottom: 5%;
+  /* margin-bottom: 5%; */
 }
 
 .head_pricing-policy {
@@ -162,11 +162,12 @@ display: flex;
  justify-self: center;
 }
 
-.icon_pricing-policy h6 {
+.icon_pricing-policy h3 {
   padding-top: 10px;
   text-align: center;
   font-weight: 700;
-  font-size: clamp(18px, 4vw, 20px);
+  font-size: clamp(18px, 4vw, 20px) !important;
+  margin-top: 0;
 }
 .desc_pricing-policy {
   display: grid;
@@ -374,7 +375,7 @@ display: flex;
 
 .content_job-prices-h-m p:nth-child(1) {
   font-size: clamp(22px, 5vw, 24px);
-  padding: 1% 1% 1% 0%;
+  padding: 1% 1% 0% 0%;
 }
 
 .desk_job-prices p {
@@ -393,6 +394,31 @@ display: flex;
   font-size: clamp(16px, 4vw, 18px);
 }
 
+
+
+
+
+
+
+
+
+
+
+
+/* water-heater-repair-cost */
+
+/* .button-top-global :nth-child(1) {
+  display: none;
+} */
+
+
+
+
+
+
+
+
+/* water-heater-repair-cost */
 
 
 
