--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -33,7 +33,7 @@ import "css/price/style_price.css";
         <div class="col-one">
           <img
             class="img-header"
-            src="/images/lg-dryer-repair.webp"
+            src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
             width="500"
             height="500"
             alt="Dryer Repair Cost"
@@ -613,17 +613,28 @@ import "css/price/style_price.css";
         <div class="pros_job-prices">
           <p>*Free dust cleaning inside the unit is included in the service.</p>
           <p>
-            Considering the option of DIY appliance repair for simpler tasks,
-            such as replacing a door latch or belt, can be a cost-effective way
-            to save on labor costs. However, it's important to weigh the pros
-            and cons of DIY repairs. While you may only need to pay for
-            replacement parts, DIY repairs can take longer and may not offer the
-            specialized knowledge and safety assurance that professional
-            technicians provide.
+            Considering a do-it-yourself appliance repair for simpler tasks can be a cost-effective way to save on labor costs. However, it's important to weigh the pros and cons of repairing with your own hands. While you may only need to pay for replacement parts, a do-it-yourself repair may take longer and may not offer the specialized knowledge and safety assurance that professional Technicians provide.
           </p>
         </div>
       </div>
       <Btn />
+
+
+
+
+
+<div class="maintenance">
+
+
+
+
+
+
+
+</div>
+
+
+
     </main>
   </Container>
 </Layout>
